cedar-lean/UnitTest/parser_tests/negative/empty_when_body.cedar
permit(principal, action, resource) when { };
